PCB Version 2 post-MX compilation error free

--- a/USB_RTC.ioc
+++ b/USB_RTC.ioc
@@ -1,9 +1,9 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,master
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-0\#ChannelRegularConversion=1
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 File.Version=6
 KeepUserPlacement=false
@@ -13,51 +13,62 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SYS
-Mcu.IP5=TIM3
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP5=TIM2
+Mcu.IP6=TIM3
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
 Mcu.Pin1=PC15-OSC32_OUT
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=VP_RTC_VS_RTC_Activate
-Mcu.Pin17=VP_RTC_VS_RTC_Calendar
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PB0
+Mcu.Pin13=PB1
+Mcu.Pin14=PB10
+Mcu.Pin15=PB11
+Mcu.Pin16=PB13
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin20=PA14
+Mcu.Pin21=PA15
+Mcu.Pin22=PB4
+Mcu.Pin23=PB6
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_RTC_VS_RTC_Activate
+Mcu.Pin27=VP_RTC_VS_RTC_Calendar
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA8
-Mcu.PinsNb=20
+Mcu.Pin4=PA0-WKUP
+Mcu.Pin5=PA1
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=5.0.0
 MxDb.Version=DB.5.0.0
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
-PA10.Locked=true
-PA10.Signal=GPIO_Output
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA0-WKUP.Signal=ADCx_IN0
+PA1.Signal=ADCx_IN1
 PA11.Mode=Device
 PA11.Signal=USB_DM
 PA12.Mode=Device
@@ -66,22 +77,42 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Locked=true
+PA15.Signal=GPIO_Output
 PA2.Locked=true
-PA2.Signal=GPIO_Input
-PA3.Signal=ADCx_IN3
-PA4.Signal=ADCx_IN4
+PA2.Signal=ADCx_IN2
+PA3.Locked=true
+PA3.Signal=S_TIM2_CH4
+PA4.Locked=true
+PA4.Signal=GPIO_Output
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
-PA8.GPIOParameters=GPIO_PuPd
-PA8.GPIO_PuPd=GPIO_PULLUP
-PA8.Locked=true
-PA8.Signal=GPIO_Input
-PA9.GPIOParameters=GPIO_PuPd
-PA9.GPIO_PuPd=GPIO_PULLUP
-PA9.Locked=true
-PA9.Signal=GPIO_Input
+PA7.Locked=true
+PA7.Signal=GPIO_Input
+PB0.Locked=true
+PB0.Signal=ADCx_IN8
+PB1.Locked=true
+PB1.Signal=GPIO_Output
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB11.Locked=true
+PB11.Signal=GPIO_Output
+PB13.GPIOParameters=GPIO_PuPd
+PB13.GPIO_PuPd=GPIO_PULLDOWN
+PB13.Locked=true
+PB13.Signal=GPIO_Input
+PB4.Locked=true
+PB4.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_PuPd
+PB6.GPIO_PuPd=GPIO_PULLUP
+PB6.Locked=true
+PB6.Signal=GPIO_Input
+PB8.Locked=true
+PB8.Signal=GPIO_Input
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -99,7 +130,7 @@ PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -125,7 +156,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=2000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=48000000
@@ -151,15 +182,22 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=48000000
 RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN4.0=ADC1_IN4,IN4
-SH.ADCx_IN4.ConfNb=1
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation4 CH4
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,AutoReloadPreload
+TIM3.IPParameters=Channel-PWM Generation1 CH1
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
