--- a/USB_RTC.ioc
+++ b/USB_RTC.ioc
@@ -13,11 +13,12 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=TIM3
-Mcu.IP7=USB
-Mcu.IP8=USB_DEVICE
-Mcu.IPNb=9
+Mcu.IP5=TIM1
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
@@ -29,28 +30,30 @@ Mcu.Pin13=PB1
 Mcu.Pin14=PB10
 Mcu.Pin15=PB11
 Mcu.Pin16=PB13
-Mcu.Pin17=PA11
-Mcu.Pin18=PA12
-Mcu.Pin19=PA13
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA11
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PA14
-Mcu.Pin21=PA15
-Mcu.Pin22=PB4
-Mcu.Pin23=PB6
-Mcu.Pin24=PB8
-Mcu.Pin25=PB9
-Mcu.Pin26=VP_RTC_VS_RTC_Activate
-Mcu.Pin27=VP_RTC_VS_RTC_Calendar
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PB4
+Mcu.Pin25=PB6
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_RTC_VS_RTC_Activate
+Mcu.Pin29=VP_RTC_VS_RTC_Calendar
 Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=30
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -91,6 +94,9 @@ PA6.Locked=true
 PA6.Signal=S_TIM3_CH1
 PA7.Locked=true
 PA7.Signal=GPIO_Input
+PA8.Locked=true
+PA8.Signal=GPIO_Input
+PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
 PB1.Locked=true
@@ -130,7 +136,7 @@ PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=false
+ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
@@ -156,7 +162,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=2000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=48000000
@@ -190,10 +196,14 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Input_Capture2_from_TI2
+SH.S_TIM1_CH2.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
+TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-Input_Capture2_from_TI2
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM2.IPParameters=Channel-PWM Generation4 CH4
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
