--- a/USB_RTC.ioc
+++ b/USB_RTC.ioc
@@ -14,11 +14,9 @@ Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USB
-Mcu.IP9=USB_DEVICE
-Mcu.IPNb=10
+Mcu.IP6=USB
+Mcu.IP7=USB_DEVICE
+Mcu.IPNb=8
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
@@ -59,17 +57,17 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=5.0.0
 MxDb.Version=DB.5.0.0
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
 PA11.Mode=Device
@@ -85,17 +83,19 @@ PA15.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=ADCx_IN2
 PA3.Locked=true
-PA3.Signal=S_TIM2_CH4
+PA3.Signal=GPIO_Output
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Locked=true
-PA6.Signal=S_TIM3_CH1
+PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_PuPd
+PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
 PA7.Signal=GPIO_Input
 PA8.Locked=true
-PA8.Signal=GPIO_Input
+PA8.Signal=GPXTI8
 PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
@@ -105,10 +105,8 @@ PB10.Locked=true
 PB10.Signal=GPIO_Output
 PB11.Locked=true
 PB11.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_PuPd
-PB13.GPIO_PuPd=GPIO_PULLDOWN
 PB13.Locked=true
-PB13.Signal=GPIO_Input
+PB13.Signal=GPXTI13
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_PuPd
@@ -162,7 +160,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreqValue=2000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=48000000
@@ -196,18 +194,14 @@ SH.ADCx_IN2.0=ADC1_IN2,IN2
 SH.ADCx_IN2.ConfNb=1
 SH.ADCx_IN8.0=ADC1_IN8,IN8
 SH.ADCx_IN8.ConfNb=1
+SH.GPXTI13.0=GPIO_EXTI13
+SH.GPXTI13.ConfNb=1
+SH.GPXTI8.0=GPIO_EXTI8
+SH.GPXTI8.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,Input_Capture2_from_TI2
 SH.S_TIM1_CH2.ConfNb=1
-SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
-SH.S_TIM2_CH4.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-Input_Capture2_from_TI2
-TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Channel-PWM Generation4 CH4
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
