unit test for hw

--- a/USB_RTC.ioc
+++ b/USB_RTC.ioc
@@ -14,9 +14,11 @@ Mcu.IP2=RCC
 Mcu.IP3=RTC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.IPNb=10
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PC14-OSC32_IN
@@ -29,29 +31,30 @@ Mcu.Pin14=PB10
 Mcu.Pin15=PB11
 Mcu.Pin16=PB13
 Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA11
+Mcu.Pin18=PA11
+Mcu.Pin19=PA12
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PA15
-Mcu.Pin24=PB4
-Mcu.Pin25=PB6
-Mcu.Pin26=PB8
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_RTC_VS_RTC_Activate
-Mcu.Pin29=VP_RTC_VS_RTC_Calendar
+Mcu.Pin20=PA13
+Mcu.Pin21=PA14
+Mcu.Pin22=PA15
+Mcu.Pin23=PB4
+Mcu.Pin24=PB6
+Mcu.Pin25=PB8
+Mcu.Pin26=PB9
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_RTC_VS_RTC_Calendar
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM1_VS_no_output1
+Mcu.Pin32=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -66,6 +69,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0-WKUP.Signal=ADCx_IN0
@@ -83,20 +87,19 @@ PA15.Signal=GPIO_Output
 PA2.Locked=true
 PA2.Signal=ADCx_IN2
 PA3.Locked=true
-PA3.Signal=GPIO_Output
+PA3.Signal=S_TIM2_CH4
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.Locked=true
 PA5.Signal=GPIO_Output
 PA6.Locked=true
-PA6.Signal=GPIO_Output
+PA6.Signal=S_TIM3_CH1
 PA7.GPIOParameters=GPIO_PuPd
 PA7.GPIO_PuPd=GPIO_PULLUP
 PA7.Locked=true
 PA7.Signal=GPIO_Input
 PA8.Locked=true
 PA8.Signal=GPXTI8
-PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
 PB0.Signal=ADCx_IN8
 PB1.Locked=true
@@ -160,7 +163,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_RTC_Init-RTC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM3_Init-TIM3-false-HAL-true
 RCC.ADCFreqValue=2000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=48000000
@@ -198,10 +201,29 @@ SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
-SH.S_TIM1_CH2.0=TIM1_CH2,Input_Capture2_from_TI2
-SH.S_TIM1_CH2.ConfNb=1
-TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-Input_Capture2_from_TI2
+SH.S_TIM2_CH4.0=TIM2_CH4,PWM Generation4 CH4
+SH.S_TIM2_CH4.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=AutoReloadPreload,Period,Prescaler,TIM_MasterOutputTrigger,RepetitionCounter,Channel-Output Compare1 No Output
+TIM1.Period=500
+TIM1.Prescaler=48
+TIM1.RepetitionCounter=1
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM2.IPParameters=Channel-PWM Generation4 CH4,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation4 CH4
+TIM2.Period=20
+TIM2.Prescaler=48
+TIM2.Pulse-PWM\ Generation4\ CH4=10
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,AutoReloadPreload,Pulse-PWM Generation1 CH1
+TIM3.Period=20
+TIM3.Prescaler=48
+TIM3.Pulse-PWM\ Generation1\ CH1=10
 USB_DEVICE.CLASS_NAME_FS=CDC
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
 USB_DEVICE.VirtualMode=Cdc
@@ -212,6 +234,10 @@ VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
 VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
