update dispensing loop

--- a/USB_RTC.ioc
+++ b/USB_RTC.ioc
@@ -46,15 +46,14 @@ Mcu.Pin28=VP_RTC_VS_RTC_Calendar
 Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PD1-OSC_OUT
 Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM1_VS_no_output1
-Mcu.Pin32=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=33
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -116,6 +115,8 @@ PB6.GPIOParameters=GPIO_PuPd
 PB6.GPIO_PuPd=GPIO_PULLUP
 PB6.Locked=true
 PB6.Signal=GPIO_Input
+PB8.GPIOParameters=GPIO_PuPd
+PB8.GPIO_PuPd=GPIO_PULLUP
 PB8.Locked=true
 PB8.Signal=GPIO_Input
 PB9.Locked=true
@@ -206,8 +207,7 @@ SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=AutoReloadPreload,Period,Prescaler,TIM_MasterOutputTrigger,RepetitionCounter,Channel-Output Compare1 No Output
+TIM1.IPParameters=AutoReloadPreload,Period,Prescaler,TIM_MasterOutputTrigger,RepetitionCounter
 TIM1.Period=500
 TIM1.Prescaler=48
 TIM1.RepetitionCounter=1
@@ -236,8 +236,6 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
-VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=custom
