--- a/USB_RTC.ioc
+++ b/USB_RTC.ioc
@@ -30,47 +30,48 @@ Mcu.Pin13=PB1
 Mcu.Pin14=PB10
 Mcu.Pin15=PB11
 Mcu.Pin16=PB13
-Mcu.Pin17=PA8
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
+Mcu.Pin17=PB14
+Mcu.Pin18=PA8
+Mcu.Pin19=PA11
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PA15
-Mcu.Pin23=PB4
-Mcu.Pin24=PB6
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_RTC_VS_RTC_Activate
-Mcu.Pin28=VP_RTC_VS_RTC_Calendar
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PA15
+Mcu.Pin24=PB4
+Mcu.Pin25=PB6
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_RTC_VS_RTC_Activate
+Mcu.Pin29=VP_RTC_VS_RTC_Calendar
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin32=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA0-WKUP
 Mcu.Pin5=PA1
 Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=5.0.0
 MxDb.Version=DB.5.0.0
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM1_UP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USB_LP_CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
 PA11.Mode=Device
@@ -109,6 +110,8 @@ PB11.Locked=true
 PB11.Signal=GPIO_Output
 PB13.Locked=true
 PB13.Signal=GPXTI13
+PB14.Locked=true
+PB14.Signal=GPIO_Output
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB6.GPIOParameters=GPIO_PuPd
@@ -138,7 +141,7 @@ PD0-OSC_IN.Signal=RCC_OSC_IN
 PD1-OSC_OUT.Mode=HSE-External-Oscillator
 PD1-OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
-ProjectManager.AskForMigrate=true
+ProjectManager.AskForMigrate=false
 ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
